--- a/Blog/package.json
+++ b/Blog/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js",
+    "prettier": "prettier '**/*.{js,json,css,scss,html,hbs,md}' --write"
   },
   "keywords": [
     "Blog"
@@ -24,5 +25,8 @@
     "mongoose": "^6.3.1",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@zestia/prettier-config": "^1.0.8"
   }
 }
