--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prettier": "prettier '**/*.{js,json,css,scss,html,jsx,md}' --write",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -36,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "@zestia/prettier-config": "^1.0.8",
     "autoprefixer": "^10.4.5",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
