--- a/Blog/package.json
+++ b/Blog/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "nodemailer": "^6.7.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "otp-generator": "^4.0.0"
   },
   "devDependencies": {
     "@zestia/prettier-config": "^1.0.8"
